cabal-version: 1.12

name:           generic-override-aeson
version:        0.4.0.0
synopsis:       Provides orphan instances necessary for integrating generic-override and aeson
description:    Please see the README on GitHub at <https://github.com/estatico/generic-override#readme>
category:       Generics
homepage:       https://github.com/estatico/generic-override#readme
bug-reports:    https://github.com/estatico/generic-override/issues
author:         Cary Robbins
maintainer:     carymrobbins@gmail.com
copyright:      2020 Estatico Studios LLC
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/estatico/generic-override

library
  exposed-modules:
      Data.Override.Aeson
      Data.Override.Aeson.Options.Internal
      Data.Override.Aeson.Options.StringModifier
      Data.Override.Aeson.Options.StringModifier.Internal
  other-modules:
      Paths_generic_override_aeson
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson >=1.4 && <3
    , base >=4.7 && <5
    , generic-override >= 0.4.0.0 && < 0.5
  default-language: Haskell2010

test-suite generic-override-aeson-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      LispCaseAeson
      Paths_generic_override_aeson
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson >=1.4 && <3
    , base >=4.7 && <5
    , generic-override
    , generic-override-aeson
    , hspec
    , regex-compat
    , text
  default-language: Haskell2010
